unpackaged/main/default/objects/splashthat__Log_Settings__mdt/fields/splashthat__Bypass_Platform_Events__c.field-meta.xml
<CustomField>
    <fullName>splashthat__Bypass_Platform_Events__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When True, LogScience will bypass platform events as configured in Log_Settings_mdt</description>
    <label>Bypass Platform Events</label>
    <type>Checkbox</type>
</CustomField>