unpackaged/main/default/objects/splashthat__Log_Settings__mdt/fields/splashthat__Enable_Logging__c.field-meta.xml
<CustomField>
    <fullName>splashthat__Enable_Logging__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When True, LogScience will perform its logging functions as configured in the remainder of Log_Settings__mdt</description>
    <label>Enable Logging</label>
    <type>Checkbox</type>
</CustomField>