unpackaged/main/default/objects/splashthat__Log_Settings__mdt/fields/splashthat__Enable_Pruning__c.field-meta.xml
<CustomField>
    <fullName>splashthat__Enable_Pruning__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When True, LogScience will perform deletes on persistently-stored logging data in the Log__c object</description>
    <label>Enable Pruning</label>
    <type>Checkbox</type>
</CustomField>