unpackaged/main/default/objects/splashthat__Log_Settings__mdt/fields/splashthat__Interfaced_Class_Order__c.field-meta.xml
<CustomField>
    <fullName>splashthat__Interfaced_Class_Order__c</fullName>
    <defaultValue>&quot;LogToObject,SystemDebug&quot;</defaultValue>
    <description>Configure Log_Settings__mdt to determine which functionality is executed when a log request is submitted to LogScience</description>
    <label>Interfaced_Class_Order</label>
    <type>TextArea</type>
</CustomField>